--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,10 @@
+<!--
+ * @Description: henggao_note
+ * @version: v1.0.0
+ * @Date: 2024-07-20 11:05:26
+ * @LastEditors: henggao
+ * @LastEditTime: 2024-07-29 09:41:24
+-->
 <!DOCTYPE html>
 <html lang="">
   <head>
@@ -12,7 +19,5 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- <script src="http://0.0.0.0:9099/logic-flow.js"></script> -->
-    <!-- built files will be auto injected -->
   </body>
 </html>
